--- a/app/src/main/res/layout/view_line_mune.xml
+++ b/app/src/main/res/layout/view_line_mune.xml
@@ -14,10 +14,12 @@
         android:gravity="center_vertical"
         android:layout_width="match_parent"
         android:orientation="horizontal"
+        android:paddingLeft="15dp"
         android:layout_height="44dp">
 
         <ImageView
-            android:layout_marginLeft="15dp"
+            android:layout_marginRight="@dimen/margin_right_speace"
+            android:visibility="gone"
             android:src="@mipmap/design_cirle"
             android:id="@+id/iv_line_mune"
             android:layout_width="@dimen/focus_image_size"
@@ -26,7 +28,7 @@
             android:id="@+id/tv_line_title"
             android:textSize="16sp"
             android:textColor="#494949"
-            android:layout_marginLeft="@dimen/common_margin"
+
             android:text="设计圈"
             android:layout_width="0dp"
             android:layout_weight="1"
