--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="bottom_textcolor_defeaut">#9D9D9D</color>
     <!--     <color name="bottom_textcolor_defeaut">#FFFFFF</color> -->
     <color name="bottom_textcolor_checked">#FF4747</color>
+    <color name="red">#FF0000</color>
 </resources>
