--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -9,11 +9,11 @@
 
     <LinearLayout
         android:gravity="center_vertical"
-        android:layout_marginTop="@dimen/login_line_margin"
+        android:layout_marginTop="@dimen/common_margin"
         android:background="@drawable/red_conner_login_bg"
         android:orientation="horizontal"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginLeft="@dimen/login_margin_board"
+        android:layout_marginRight="@dimen/login_margin_board"
         android:layout_width="match_parent"
         android:layout_height="48dp">
 
@@ -32,18 +32,18 @@
 
     <RelativeLayout
         android:gravity="center_vertical"
-        android:layout_marginTop="@dimen/login_line_margin"
+        android:layout_marginTop="@dimen/common_margin"
 
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginLeft="@dimen/login_margin_board"
+        android:layout_marginRight="@dimen/login_margin_board"
         android:layout_width="match_parent"
         android:layout_height="48dp">
 
 
 
         <EditText
-            android:paddingLeft="@dimen/login_line_margin"
-            android:paddingRight="@dimen/login_line_margin"
+            android:paddingLeft="@dimen/common_margin"
+            android:paddingRight="@dimen/common_margin"
             android:textSize="16sp"
             android:hint="请输入手机验证码"
             android:background="@drawable/red_conner_login_bg"
@@ -51,8 +51,8 @@
             android:layout_height="match_parent" />
 
         <Button
-            android:paddingLeft="@dimen/login_line_margin"
-            android:paddingRight="@dimen/login_line_margin"
+            android:paddingLeft="@dimen/common_margin"
+            android:paddingRight="@dimen/common_margin"
             android:layout_alignParentRight="true"
             android:textSize="16sp"
             android:background="@drawable/red_conner_login_btn_bg"
@@ -67,12 +67,12 @@
     <Button
         android:textSize="18sp"
         android:background="@drawable/red_conner_login_btn_bg"
-        android:layout_marginTop="@dimen/login_line_margin"
+        android:layout_marginTop="@dimen/common_margin"
         android:gravity="center"
         android:text="确定"
         android:textColor="@color/whilte"
-        android:layout_marginLeft="50dp"
-        android:layout_marginRight="50dp"
+        android:layout_marginLeft="@dimen/login_margin_board"
+        android:layout_marginRight="@dimen/login_margin_board"
         android:layout_width="match_parent"
         android:layout_height="48dp" />
 
