--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,8 +46,8 @@
                 android:layout_marginTop="@dimen/login_line_margin"
                 android:background="@drawable/red_conner_login_bg"
                 android:orientation="horizontal"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="@dimen/login_margin_board"
+                android:layout_marginRight="@dimen/login_margin_board"
                 android:layout_width="match_parent"
                 android:layout_height="48dp">
 
@@ -77,8 +77,8 @@
                 android:layout_marginTop="@dimen/login_line_margin"
                 android:background="@drawable/red_conner_login_bg"
                 android:orientation="horizontal"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="@dimen/login_margin_board"
+                android:layout_marginRight="@dimen/login_margin_board"
                 android:layout_width="match_parent"
                 android:layout_height="48dp">
 
@@ -110,8 +110,8 @@
                 android:gravity="center"
                 android:text="登录"
                 android:textColor="@color/whilte"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="@dimen/login_margin_board"
+                android:layout_marginRight="@dimen/login_margin_board"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:id="@+id/btn_login" />
@@ -119,8 +119,8 @@
             <LinearLayout
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:layout_marginLeft="50dp"
-                android:layout_marginRight="50dp"
+                android:layout_marginLeft="@dimen/login_margin_board"
+                android:layout_marginRight="@dimen/login_margin_board"
                 android:layout_width="match_parent"
                 android:layout_height="48dp">
 
