--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -17,9 +17,9 @@
         android:layout_width="match_parent"
         android:layout_height="48dp">
 
-
-
         <EditText
+            android:inputType="phone"
+            android:id="@+id/et_forget_password_phone"
             android:textSize="16sp"
             android:paddingLeft="@dimen/common_margin"
             android:hint="请输入你的登录手机号"
@@ -33,15 +33,14 @@
     <RelativeLayout
         android:gravity="center_vertical"
         android:layout_marginTop="@dimen/common_margin"
-
         android:layout_marginLeft="@dimen/login_margin_board"
         android:layout_marginRight="@dimen/login_margin_board"
         android:layout_width="match_parent"
         android:layout_height="48dp">
 
-
-
         <EditText
+            android:id="@+id/et_forget_password_msg_recevie"
+            android:inputType="number"
             android:paddingLeft="@dimen/common_margin"
             android:paddingRight="@dimen/common_margin"
             android:textSize="16sp"
@@ -61,10 +60,11 @@
             android:textColor="@color/whilte"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/btn_login" />
+            android:id="@+id/btn_get_phone_msg_number" />
         </RelativeLayout>
 
     <Button
+        android:id="@+id/btn_sure_to_reset_password"
         android:textSize="18sp"
         android:background="@drawable/red_conner_login_btn_bg"
         android:layout_marginTop="@dimen/common_margin"
