--- a/app/src/main/res/layout/fragment_home_first.xml
+++ b/app/src/main/res/layout/fragment_home_first.xml
@@ -22,30 +22,85 @@
             android:max="100"
             android:progress="0" />
 
-        <TextView
-            android:id="@+id/tvStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#903B9FF8"
-            android:padding="5dp"
-            android:text="当前内核:--\n内核版本:---"
-            android:textColor="#FFF"
-            android:textSize="12sp" />
+
     </RelativeLayout>
 
 
     <!--资源异常页面-->
     <LinearLayout
+        android:background="@color/whilte"
+        android:gravity="center"
         android:visibility="gone"
         android:id="@+id/ll_err_page"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:src="@mipmap/err_main"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_marginTop="@dimen/common_margin"
+            android:text="抱歉，您访问的页面已丢失~"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_marginTop="@dimen/common_margin"
+            android:layout_marginBottom="@dimen/login_type_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <LinearLayout
+                android:id="@+id/ll_err_refresh"
+                android:gravity="center"
+                android:background="@drawable/err_btn_bg"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_marginLeft="10dp"
+                    android:src="@mipmap/err_refresh"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="@dimen/common_margin"
+                    android:gravity="center"
+                    android:text="刷新页面"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ll_err_back"
+                android:layout_marginLeft="@dimen/common_margin"
+                android:gravity="center"
+                android:background="@drawable/err_btn_bg"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:orientation="horizontal">
+                <ImageView
+                    android:layout_marginLeft="10dp"
+                    android:src="@mipmap/err_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="@dimen/common_margin"
+                    android:gravity="center"
+                    android:text="返回首页"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp" />
+
+            </LinearLayout>
+        </LinearLayout>
+
 
     </LinearLayout>
 
-    <include layout="@layout/new_popup_common_view" />
+    <include layout="@layout/new_popup_common_view" android:visibility="gone" />
 
 
 </FrameLayout>
