--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,6 @@
     <color name="bottom_textcolor_checked">#FF4747</color>
     <color name="red">#FF0000</color>
     <color name="login_red">#FF4747</color>
+
+    <color name="transparent_half">#b0000000</color>
 </resources>
