--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -4,31 +4,44 @@
     android:id="@+id/activity_forget_password"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   android:orientation="vertical"
+    android:orientation="vertical"
     tools:context="com.bowen.zdsjclub.activity.ForgetPasswordActivity">
 
-    <LinearLayout
-        android:gravity="center_vertical"
+    <RelativeLayout
         android:layout_marginTop="@dimen/common_margin"
-        android:background="@drawable/red_conner_login_bg"
-        android:orientation="horizontal"
-        android:layout_marginLeft="@dimen/login_margin_board"
-        android:layout_marginRight="@dimen/login_margin_board"
         android:layout_width="match_parent"
-        android:layout_height="48dp">
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:gravity="center_vertical"
 
-        <EditText
-            android:inputType="phone"
-            android:id="@+id/et_forget_password_phone"
-            android:textSize="16sp"
-            android:paddingLeft="@dimen/common_margin"
-            android:hint="请输入你的登录手机号"
-            android:background="@null"
+            android:background="@drawable/red_conner_login_bg"
+            android:orientation="horizontal"
+            android:layout_marginLeft="@dimen/login_margin_board"
+            android:layout_marginRight="@dimen/login_margin_board"
             android:layout_width="match_parent"
-            android:layout_height="30dp" />
+            android:layout_height="48dp">
 
-    </LinearLayout>
+            <EditText
+                android:inputType="phone"
+                android:id="@+id/et_forget_password_phone"
+                android:textSize="16sp"
+                android:paddingLeft="@dimen/common_margin"
+                android:hint="请输入你的登录手机号"
+                android:background="@null"
+                android:layout_width="match_parent"
+                android:layout_height="30dp" />
 
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/iv_input_phone_status"
+            android:layout_marginRight="@dimen/margin_right_speace"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/input_right"
+            android:layout_width="24dp"
+            android:layout_height="24dp" />
+    </RelativeLayout>
 
     <RelativeLayout
         android:gravity="center_vertical"
@@ -61,7 +74,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/btn_get_phone_msg_number" />
-        </RelativeLayout>
+    </RelativeLayout>
 
     <Button
         android:id="@+id/btn_sure_to_reset_password"
@@ -85,4 +98,4 @@
         android:layout_height="48dp"
         android:id="@+id/tv_back_login" />
 
-    </LinearLayout>
+</LinearLayout>
