--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -58,6 +58,7 @@
         </LinearLayout>
 
         <ImageView
+            android:visibility="gone"
             android:id="@+id/iv_input_phone_status"
             android:layout_marginRight="@dimen/margin_right_speace"
             android:layout_alignParentRight="true"
@@ -113,10 +114,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <CheckBox
+            android:button="@drawable/agree_comment"
             android:id="@+id/cb_register_comment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:layout_marginLeft="@dimen/loadding_margin"
             android:id="@+id/tv_register_comment"
             android:text="我同意遵守《注册协议》"
             android:layout_width="wrap_content"
