--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,7 +69,8 @@
                     android:hint="请输入你的账号"
                     android:background="@null"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp" />
+                    android:layout_height="30dp"
+                    android:id="@+id/et_login_phone_number" />
 
             </LinearLayout>
 
@@ -101,7 +102,8 @@
                     android:hint="请输入你的登录密码"
                     android:background="@null"
                     android:layout_width="match_parent"
-                    android:layout_height="30dp" />
+                    android:layout_height="30dp"
+                    android:id="@+id/et_login_password" />
 
                 <EditText
                     android:inputType="phone"
