--- a/app/src/main/res/layout/dialog_common_msg.xml
+++ b/app/src/main/res/layout/dialog_common_msg.xml
@@ -31,6 +31,7 @@
         android:layout_height="44dp">
 
         <TextView
+            android:textColor="@color/blue2"
             android:id="@+id/tv_common_dialog_sure"
             android:gravity="center"
             android:text="确定"
@@ -39,11 +40,13 @@
             android:layout_height="match_parent" />
 
         <View
+            android:id="@+id/tv_common_dialog_spit_line"
             android:background="@color/bottom_textcolor_defeaut"
             android:layout_width="0.45dp"
             android:layout_height="match_parent"/>
 
         <TextView
+            android:textColor="@color/blue2"
             android:id="@+id/tv_common_dialog_cancel"
             android:gravity="center"
             android:text="取消"
