--- a/app/src/main/res/drawable/home_bottom_mine.xml
+++ b/app/src/main/res/drawable/home_bottom_mine.xml
@@ -5,7 +5,7 @@
     <item android:drawable="@mipmap/home_bottom_mine_select" android:state_checked="true"/>
 
     <!-- 按下 -->
-    <item android:drawable="@mipmap/home_bottom_mine_select" android:state_pressed="true"/>
+    <!--<item android:drawable="@mipmap/home_bottom_mine_select" android:state_pressed="true"/>-->
     <item android:drawable="@mipmap/home_bottom_mine_default"/>
 
 </selector>
