--- a/app/src/main/res/layout/dialog_common_msg.xml
+++ b/app/src/main/res/layout/dialog_common_msg.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:textStyle="bold"
         android:id="@+id/tv_common_dialog_msg"
         android:gravity="center"
         android:padding="@dimen/margin_right_speace"
@@ -31,6 +32,7 @@
         android:layout_height="44dp">
 
         <TextView
+            android:textStyle="bold"
             android:textColor="@color/blue2"
             android:id="@+id/tv_common_dialog_sure"
             android:gravity="center"
@@ -46,6 +48,7 @@
             android:layout_height="match_parent"/>
 
         <TextView
+            android:textStyle="bold"
             android:textColor="@color/blue2"
             android:id="@+id/tv_common_dialog_cancel"
             android:gravity="center"
