--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,13 +13,14 @@
     >
 
 
-    <ImageView
+   <!-- <ImageView
         android:scaleType="fitXY"
         android:src="@mipmap/login_bg"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" />-->
 
     <LinearLayout
+        android:background="@mipmap/login_bg"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -37,9 +38,9 @@
             android:orientation="vertical">
 
             <ImageView
-                android:src="@mipmap/ic_launcher"
-                android:layout_width="70dp"
-                android:layout_height="70dp" />
+                android:src="@mipmap/login_logo"
+                android:layout_width="80dp"
+                android:layout_height="80dp" />
 
             <LinearLayout
                 android:gravity="center_vertical"
