第三方登录相关内容

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -31,30 +31,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="30dp" />
 
-            <EditText
-                android:id="@+id/editText2"
-                android:inputType="number"
-                android:paddingLeft="@dimen/common_margin"
-                android:paddingRight="@dimen/common_margin"
-                android:textSize="16sp"
-                android:hint="请输入手机验证码"
-                android:background="@drawable/red_conner_login_bg"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
-            <EditText
-                android:id="@+id/editText"
-                android:inputType="number"
-                android:paddingLeft="@dimen/common_margin"
-                android:paddingRight="@dimen/common_margin"
-                android:textSize="16sp"
-                android:hint="请输入手机验证码"
-                android:background="@drawable/red_conner_login_bg"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
-
         </LinearLayout>
 
         <ImageView
@@ -101,6 +77,44 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/btn_get_phone_msg_number" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:visibility="gone"
+        android:id="@+id/rl_third_login_bind"
+        android:layout_marginTop="@dimen/common_margin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:gravity="center_vertical"
+            android:background="@drawable/red_conner_login_bg"
+            android:orientation="horizontal"
+            android:layout_marginLeft="@dimen/login_margin_board"
+            android:layout_marginRight="@dimen/login_margin_board"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/login_line_height">
+
+            <EditText
+                android:inputType="textPassword"
+                android:id="@+id/et_third_login_password"
+                android:textSize="14sp"
+                android:paddingLeft="@dimen/common_margin"
+                android:hint="请输入密码"
+                android:background="@null"
+                android:layout_width="match_parent"
+                android:layout_height="30dp" />
+
+        </LinearLayout>
+
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/iv_input_password_status"
+            android:layout_marginRight="@dimen/margin_right_speace"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/input_err"
+            android:layout_width="24dp"
+            android:layout_height="24dp" />
     </RelativeLayout>
 
     <LinearLayout
