--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="login_user_logo">24dp</dimen>
     <dimen name="loadding_margin">5dp</dimen>
     <dimen name="must_require">12dp</dimen>
+    <dimen name="share_icon_size">50dp</dimen>
 </resources>
