第三方绑定，头像上传，登录注册提示性文字颜色修改

--- a/app/src/main/res/layout/activity_confirm_password.xml
+++ b/app/src/main/res/layout/activity_confirm_password.xml
@@ -20,6 +20,7 @@
         android:layout_height="@dimen/login_line_height">
 
         <EditText
+            android:textColorHint="#888888"
             android:inputType="textPassword"
             android:id="@+id/et_confirm_password_phone"
             android:textSize="14sp"
@@ -54,6 +55,7 @@
         android:layout_height="@dimen/login_line_height">
 
         <EditText
+            android:textColorHint="#888888"
             android:inputType="textPassword"
             android:id="@+id/et_forget_password_phone_two"
             android:textSize="14sp"
