--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -22,6 +22,7 @@
             android:layout_height="@dimen/login_line_height">
 
             <EditText
+                android:textColorHint="#888888"
                 android:inputType="phone"
                 android:id="@+id/et_forget_password_phone"
                 android:textSize="14sp"
@@ -53,6 +54,7 @@
         android:layout_height="@dimen/login_line_height">
 
         <EditText
+            android:textColorHint="#888888"
             android:id="@+id/et_forget_password_msg_recevie"
             android:inputType="number"
             android:paddingLeft="@dimen/common_margin"
@@ -95,6 +97,7 @@
             android:layout_height="@dimen/login_line_height">
 
             <EditText
+                android:textColorHint="#888888"
                 android:inputType="textPassword"
                 android:id="@+id/et_third_login_password"
                 android:textSize="14sp"
