--- a/app/src/main/res/layout/activity_register_step2.xml
+++ b/app/src/main/res/layout/activity_register_step2.xml
@@ -31,6 +31,7 @@
             android:layout_height="@dimen/login_line_height">
 
             <EditText
+                android:textColorHint="#888888"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:id="@+id/et_confirm_nick_name"
@@ -75,6 +76,7 @@
             android:layout_height="@dimen/login_line_height">
 
             <EditText
+                android:textColorHint="#888888"
                 android:inputType="textPassword"
                 android:id="@+id/et_confirm_password_phone"
                 android:textSize="14sp"
@@ -118,6 +120,7 @@
             android:layout_height="@dimen/login_line_height">
 
             <EditText
+                android:textColorHint="#888888"
                 android:inputType="textPassword"
                 android:id="@+id/et_confirm_password_two"
                 android:textSize="14sp"
@@ -154,6 +157,7 @@
             android:layout_height="@dimen/login_line_height">
 
             <EditText
+                android:textColorHint="#888888"
                 android:inputType="phone"
                 android:id="@+id/et_register_two_introduce_phone"
                 android:textSize="14sp"
