--- a/app/src/main/res/layout/share_popupwindow.xml
+++ b/app/src/main/res/layout/share_popupwindow.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout android:background="#4C000000"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_alignParentBottom="true"
     android:orientation="vertical" android:layout_width="match_parent"
     android:id="@+id/pop_layout"
     android:background="#ffffff"
@@ -162,3 +167,5 @@
 
     </LinearLayout>
 </LinearLayout>
+
+</RelativeLayout>
