分享相关内容登录

--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -136,8 +136,13 @@
             android:layout_height="wrap_content" />
         <TextView
             android:layout_marginLeft="@dimen/loadding_margin"
+            android:text="我同意遵守"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_marginLeft="@dimen/loadding_margin"
             android:id="@+id/tv_register_comment"
-            android:text="我同意遵守《注册协议》"
+            android:text="《注册协议》"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
