--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/et_forget_password_phone"
                 android:textSize="14sp"
                 android:paddingLeft="@dimen/common_margin"
-                android:hint="请输入你的登录手机号"
+                android:hint="请输入您的登录手机号"
                 android:background="@null"
                 android:layout_width="match_parent"
                 android:layout_height="30dp" />
@@ -70,7 +70,7 @@
             android:paddingLeft="@dimen/common_margin"
             android:paddingRight="@dimen/common_margin"
             android:layout_alignParentRight="true"
-            android:textSize="14sp"
+            android:textSize="13sp"
             android:background="@drawable/red_conner_login_btn_bg"
             android:gravity="center"
             android:text="获取验证码"
@@ -140,6 +140,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:textColor="@color/blue2"
             android:layout_marginLeft="@dimen/loadding_margin"
             android:id="@+id/tv_register_comment"
             android:text="《注册协议》"
