--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -94,7 +94,7 @@
                     android:inputType="phone"
                     android:textSize="14sp"
                     android:paddingLeft="@dimen/common_margin"
-                    android:hint="请输入你的账号"
+                    android:hint="请输入您的账号"
                     android:background="@null"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
@@ -129,7 +129,7 @@
                     android:inputType="textPassword"
                     android:textSize="14sp"
                     android:paddingLeft="@dimen/common_margin"
-                    android:hint="请输入你的登录密码"
+                    android:hint="请输入您的登录密码"
                     android:background="@null"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
@@ -139,7 +139,7 @@
                     android:inputType="phone"
                     android:textSize="16sp"
                     android:paddingLeft="@dimen/common_margin"
-                    android:hint="请输入你的账号"
+                    android:hint="请输入您的账号"
                     android:background="@null"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
@@ -150,7 +150,7 @@
                     android:inputType="phone"
                     android:textSize="16sp"
                     android:paddingLeft="@dimen/common_margin"
-                    android:hint="请输入你的账号"
+                    android:hint="请输入您的账号"
                     android:background="@null"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
