--- a/app/src/main/res/layout/activity_register_step2.xml
+++ b/app/src/main/res/layout/activity_register_step2.xml
@@ -35,9 +35,9 @@
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:id="@+id/et_confirm_nick_name"
-                android:textSize="14sp"
+                android:textSize="13sp"
                 android:paddingLeft="@dimen/common_margin"
-                android:hint="请输入你的昵称(可以为文字、字母、数字)"
+                android:hint="请输入您的昵称(可以为文字、字母、数字)"
                 android:background="@null"
                 android:layout_width="match_parent"
                 android:layout_height="30dp" />
@@ -79,7 +79,7 @@
                 android:textColorHint="#888888"
                 android:inputType="textPassword"
                 android:id="@+id/et_confirm_password_phone"
-                android:textSize="14sp"
+                android:textSize="13sp"
                 android:paddingLeft="@dimen/common_margin"
                 android:hint="请输入6-16位内的字母加数字的密码"
                 android:background="@null"
@@ -123,7 +123,7 @@
                 android:textColorHint="#888888"
                 android:inputType="textPassword"
                 android:id="@+id/et_confirm_password_two"
-                android:textSize="14sp"
+                android:textSize="13sp"
                 android:paddingLeft="@dimen/common_margin"
                 android:hint="请再次输入您的密码"
                 android:background="@null"
@@ -160,7 +160,7 @@
                 android:textColorHint="#888888"
                 android:inputType="phone"
                 android:id="@+id/et_register_two_introduce_phone"
-                android:textSize="14sp"
+                android:textSize="13sp"
                 android:paddingLeft="@dimen/common_margin"
                 android:hint="请输入推荐人的手机号"
                 android:background="@null"
