--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,11 +12,11 @@
     <LinearLayout
         android:clickable="true"
         android:id="@+id/ll_login_left_back"
-        android:gravity="left|top"
-        android:layout_margin="@dimen/login_line_margin"
+        android:gravity="center"
+        android:layout_gravity="left|top"
         android:orientation="horizontal"
-        android:layout_width="80dp"
-        android:layout_height="match_parent">
+        android:layout_width="60dp"
+        android:layout_height="60dp">
 
         <TextView
             android:visibility="gone"
