--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:background="@color/whilte"
         android:id="@+id/ll_common_header_root"
         android:gravity="center_vertical"
         android:layout_width="match_parent"
@@ -66,6 +67,7 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:textColor="#1b1b20"
                 android:id="@+id/tv_head_title_right_text"
                 android:textSize="16sp"
                 android:text=""
@@ -77,6 +79,7 @@
 
     </LinearLayout>
     <View
+        android:id="@+id/header_underline"
         android:visibility="gone"
         android:background="@color/bottom_textcolor_defeaut"
         android:layout_width="match_parent"
